Added OrderServices and implemented createOrder().

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port = 2322
 fakeStore.api.BaseUrl = https://fakestoreapi.com
 fakeStore.api.product = /products
+fakeStore.api.category = /category
+fakeStore.api.allCategories = /categories
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/productservice
 spring.datasource.username=root
