--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,23 @@
-server.port = 2322
+server.port = ${SERVER_PORT}
 fakeStore.api.BaseUrl = https://fakestoreapi.com
 fakeStore.api.product = /products
 fakeStore.api.category = /category
 fakeStore.api.allCategories = /categories
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/productservice
-spring.datasource.username=root
-spring.datasource.password=Ajaysql@123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto: update
+spring.datasource.url: jdbc:mysql://localhost:3306/productservice
+spring.datasource.username: root
+spring.datasource.password: Ajaysql@123
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=productservice
